--- a/3.React-States/3.ReactMemeGenerator/memegen/src/styles/Meme.css
+++ b/3.React-States/3.ReactMemeGenerator/memegen/src/styles/Meme.css
@@ -1,3 +1,10 @@
+section {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+
 form {
 	display: flex;
 	flex-direction: column;
@@ -46,4 +53,14 @@ form {
 
 .meme-submit:hover {
 	cursor: pointer;
+}
+
+.meme-img-box {
+	width: 420px;
+	max-height: 320px;
+}
+
+.meme-img-box img {
+	width: 100%;
+	height: 100%;
 }
