--- a/3.React-States/6.ReactMemeGenerator/memegen/src/styles/Meme.css
+++ b/3.React-States/6.ReactMemeGenerator/memegen/src/styles/Meme.css
@@ -57,10 +57,37 @@ form {
 
 .meme-img-box {
 	width: 420px;
-	max-height: 320px;
+	position: relative;
 }
 
 .meme-img-box img {
 	width: 100%;
 	height: 100%;
+	border-radius: 3px;
+}
+
+.meme-text {
+	position: absolute;
+	width: 80%;
+	text-align: center;
+	left: 50%;
+	transform: translateX(-50%);
+	margin: 15px 0;
+	padding: 0 5px;
+	font-family: impact, sans-serif;
+	font-size: 2em;
+	text-transform: uppercase;
+	color: white;
+	letter-spacing: 1px;
+	text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000,
+		-2px 2px 0 #000, 0 2px 0 #000, 2px 0 0 #000, 0 -2px 0 #000, -2px 0 0 #000,
+		2px 2px 5px #000;
+}
+
+.bottom {
+	bottom: 0;
+}
+
+.top {
+	top: 0;
 }
